--- a/src/app/components/dependency-graph/dependency-graph.component.html
+++ b/src/app/components/dependency-graph/dependency-graph.component.html
@@ -232,7 +232,7 @@
   </div>
 
   <!-- Legend -->
-  <div class="legend-panel">
+  <!-- <div class="legend-panel">
     <h4>Legend</h4>
     
     <div class="legend-section">
@@ -296,5 +296,5 @@
       <h5>Edge Width</h5>
       <p>Thicker edges indicate higher usage</p>
     </div>
-  </div>
+  </div> -->
 </div>
